--- a/hello/.cs50.yaml
+++ b/hello/.cs50.yaml
@@ -5,10 +5,10 @@ check50:
         stdout: Hello, world!
         exit: 0
     foo:
-      - run: python3 hello.py # run python3 foo.py
-        stdin: baz # insert baz into stdin
-        stdout: baz # expect baz in stdout
-        exit: 0 # expect program to exit with exitcode 0
+      - run: python3 hello.py
+        stdin: baz
+        stdout: baz
+        exit: 0
 submit50:
   checks:
     hello world:
