--- a/hello/.cs50.yaml
+++ b/hello/.cs50.yaml
@@ -9,3 +9,9 @@ check50:
         stdin: baz
         stdout: baz
         exit: 0
+submit50:
+  checks:
+    hello world:
+      - run: python3 hello.py
+        stdout: Hello, world!
+        exit: 0
